--- a/package.json
+++ b/package.json
@@ -7,23 +7,22 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
-    "s": "gatsby develop",
+    "d": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve",
+    "s": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "gatsby": "^5.13.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "gatsby": "^5.13.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "uri-js": "^4.2.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
     "typescript": "^5.3.3"
   },
   "packageManager": "yarn@4.4.0"
